@@ -108,6 +108,7 @@ OPTIONS
 -txFile:                        Path of a file containing a list of preferred genes transcripts to be used in priority during the annotation (Preferred genes transcripts names should be tab or space separated)
 
 -vcf: 				Creation of a VCF output file format
+                                (-samplesidBEDcol, -svtBEDcol and -SVinputInfo need to be defined too)
 				Values: 0 (default) or 1
 
 
